base/openclaw/volumes_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openclaw
spec:
  template:
    spec:
      volumes:
      - hostPath:
          path: /media/seagate/openclaw
          type: DirectoryOrCreate
        name: openclaw-data
      - configMap:
          name: openclaw-config
        name: openclaw-config
